// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > release > postReleaseComment > 200 > ok 1`] = `
{
  "response": {
    "message": "test",
  },
}
`;

exports[`routes > release > postReleaseComment > audit > expected call 1`] = `
{
  "message": "test",
}
`;
